--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,3 +5,10 @@
 
 trigger:
 - master
+- task: ArchiveFiles@2
+  inputs:
+    rootFolderOrFile: '$(Build.BinariesDirectory)'
+    includeRootFolder: true
+    archiveType: 'zip'
+    archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
+    replaceExistingArchive: true
